Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-8256

snapshotStats crash during shutdown bucket

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 2.1.0
    • 2.1.0
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      scheduled snapshotStats task is picked up and being executed during the bucket destruction. This unfortunately cause a crash for invalid reference to a being-deallocated internal structure (epstat, configuration, etc).

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jin Jin Lim (Inactive)
              jin Jin Lim (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty