MB-8256 synchronously call snapshotStats during the shutdown

Change-Id: I04a10d5bc5897d28cb9e8e66e015604a683b4afd
Reviewed-on: http://review.couchbase.org/26273
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>